--- a/module-1/sml-1-case-study.qmd
+++ b/module-1/sml-1-case-study.qmd
@@ -259,20 +259,15 @@ Now, we will proceed to the analyses.
 We'll first conduct a regression analysis, like in the code-along. We use a generalized linear model due to the dependent variable being dichotomous. The code is relatively straightforward; the comments explain each step.
 
 ```{r}
-m1 <- glm(good_grad_rate ~ total_enroll + pct_admitted + n_bach + n_mast + n_doc + tuition_fees + percent_fin_aid + avg_salary, data = ipeds, family = "binomial") # to the left of the ~ is our dependent variable; to the right are the independent variables; family = "binomial" is to specify the correct model type for the dichotomous dependent variable
+m1 <- glm(good_grad_rate ~ total_enroll + pct_admitted + n_bach + n_mast + n_doc + tuition_fees + percent_fin_aid + avg_salary, data = ipeds, family = "binomial") # to the left of the ~ is our dependent variable; to the right are the independent variables
+# family = "binomial" is to specify the correct model type for the dichotomous dependent variable
 
 summary(m1) # summary table of model output
 ```
 
 Then, we'll conduct a supervised machine learning analysis (with a simple but still commonly used model - in fact, the same model we used for the regression, a generalized linear model!). Again, for now, you'll run this code; later, you'll work through each step in detail.
 
-One note – you'll see here we use a value of .20 for the proportion of the data in the test set (and .80 in the training data set). For now, know that this isn't a hard rule, but, rather, the "best" split depends on a few considerations that we'll discuss in a later module.
-
 ```{r}
-ipeds_split <- initial_split(ipeds, prop = 0.8)
-train <- training(ipeds_split)
-test <- testing(ipeds_split)
-
 my_rec <- recipe(good_grad_rate ~ total_enroll + pct_admitted + n_bach + n_mast + n_doc + tuition_fees + percent_fin_aid + avg_salary, data = ipeds) # same as above; this sets up what predicts the outcome
 
 # specify model
@@ -285,9 +280,12 @@ my_wf <- workflow() %>% # this starts a workflow, which will stitch together the
     add_model(my_mod) %>% # adds the model
     add_recipe(my_rec) # adds the recipe
 
-fit_model <- last_fit(my_wf, ipeds_split) # fits the model
+fit_model <- fit(my_wf, data = ipeds) # fits the model
 
-collect_metrics(fit_model) # examines accuracy
+ipeds_preds <- predict(fit_model, ipeds, type = "class") %>% # makes predictions
+  bind_cols(ipeds %>% select(good_grad_rate)) # binds the known outcomes
+
+metrics(ipeds_preds, truth = good_grad_rate, estimate = .pred_class) # calculates metrics
 ```
 
 The key to observe at this point is what is similar and different between the two approaches (regression and supervised machine learning). Both used the same underlying statistical model, but had some stark differences. Add two or more similarities and two or more differences (no wrong answers!) below.
