--- a/module-3/sml-3-code-along.qmd
+++ b/module-3/sml-3-code-along.qmd
@@ -36,7 +36,7 @@ pacman::p_load(pacman, knitr, tidyverse, readxl)
 # Code-along: R
 
 ::: {.panel-tabset}
-## 0. Setup
+## 0.
 
 **Loading, setting up: create a .R file in /module-3 and run this code**
 
@@ -46,34 +46,36 @@ pacman::p_load(pacman, knitr, tidyverse, readxl)
 library(tidyverse)
 library(tidymodels)
 
-starwars_recoded <- starwars %>% # built-in data available just by typing
-    mutate(species_human = ifelse(species == "Human", "human", "not human"))
+pokemon <- read_csv("data/pokemon-data.csv")
 
-starwars_recoded %>% 
-    count(species_human) # how many humans are there?
+pokemon %>%
+    glimpse()
+
+pokemon %>% 
+    count(early_gen) # distribution of early vs later generations
 ```
 
-## 1. Split data
+## 1.
 
 ```{r}
 #| eval: false
 #| echo: true
-train_test_split <- initial_split(starwars_recoded, prop = .70)
+train_test_split <- initial_split(pokemon, prop = .70)
 
 data_train <- training(train_test_split)
 ```
 
-## 2. Engineer features
+## 2.
 
 ```{r}
 #| eval: false
 #| echo: true
-# predicting humans based on the variables we used in LL1 + birth_year and homeworld
-my_rec <- recipe(species_human ~ height + mass + birth_year + eye_color, data = data_train) %>% 
-    step_novel(eye_color) # need to dummy code
+# predicting early generation status based on height, weight, and HP
+my_rec <- recipe(early_gen ~ height_m + weight_kg + hp, data = data_train) %>% 
+    step_mutate(early_gen = as.factor(early_gen))
 ```
 
-## 3. Specify model
+## 3.
 
 ```{r}
 #| eval: false
@@ -89,7 +91,7 @@ my_wf <-
     add_recipe(my_rec)
 ```
 
-## 4. Fit model (training)
+## 4.
 
 **Model building with training data**
 
@@ -100,7 +102,7 @@ class_metrics <- metric_set(accuracy, sensitivity, specificity, ppv, npv, kap) #
 final_fit <- last_fit(my_wf, train_test_split, metrics = class_metrics)
 ```
 
-## 4. Fit model (testing)
+## 4.
 
 **Model evaluating with testing data**
 
@@ -111,14 +113,14 @@ fit_model <- fit(my_wf, data_train)
 
 predictions <- predict(fit_model, data_train) %>% 
     bind_cols(data_train) %>% 
-    mutate(species_human = as.factor(species_human))
+    mutate(early_gen = as.factor(early_gen))
 
 predictions %>%
-    metrics(species_human, .pred_class) %>%
+    metrics(early_gen, .pred_class) %>%
     filter(.metric == "accuracy")
 ```
 
-## 5. Evaluate accuracy
+## 5.
 
 **Only run this once you're done training/messing with your model!; this way, these estimates will be unbiased**
 
@@ -129,68 +131,12 @@ final_fit %>%
     collect_metrics()
 ```
 
-## 6. Aside: Joins!
-
-```{r}
-#| eval: false
-#| echo: true
-band_members %>% left_join(band_instruments)
-band_members %>% inner_join(band_instruments)
-```
-
 :::
 
 # Code-along: python
 
+**AR, separate into the same steps as above?**
+
 ```{python}
-#| eval: false
-#| echo: true
 
-import pandas as pd
-from sklearn.model_selection import train_test_split
-from sklearn.preprocessing import OneHotEncoder
-from sklearn.compose import ColumnTransformer
-from sklearn.pipeline import Pipeline
-from sklearn.linear_model import LogisticRegression
-from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score
-
-# Assuming starwars data is loaded into a pandas DataFrame called 'starwars'
-starwars_recoded = starwars.copy()
-starwars_recoded['species_human'] = starwars_recoded['species'].map(lambda x: 'human' if x == 'Human' else 'not human')
-
-# Split data
-X = starwars_recoded[['height', 'mass', 'birth_year', 'eye_color']]
-y = starwars_recoded['species_human']
-X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42)
-
-# Engineer features and specify model
-preprocessor = ColumnTransformer(
-    transformers=[
-        ('num', 'passthrough', ['height', 'mass', 'birth_year']),
-        ('cat', OneHotEncoder(drop='first'), ['eye_color'])
-    ])
-
-model = Pipeline([
-    ('preprocessor', preprocessor),
-    ('classifier', LogisticRegression())
-])
-
-# Fit model
-model.fit(X_train, y_train)
-
-# Evaluate accuracy
-y_pred = model.predict(X_test)
-accuracy = accuracy_score(y_test, y_pred)
-precision = precision_score(y_test, y_pred, pos_label='human')
-recall = recall_score(y_test, y_pred, pos_label='human')
-f1 = f1_score(y_test, y_pred, pos_label='human')
-
-print(f"Accuracy: {accuracy:.2f}")
-print(f"Precision: {precision:.2f}")
-print(f"Recall: {recall:.2f}")
-print(f"F1 Score: {f1:.2f}")
-
-# Aside: Joins (using pandas)
-merged_inner = pd.merge(band_members, band_instruments, how='inner')
-merged_left = pd.merge(band_members, band_instruments, how='left')
 ```
